Update LinkedStack.java